...
                            app.getString(R.string.category_bar_plural),
                            ignoreCase = true
                        )
                    ) {
                        elements = elementsRepo.selectByBtcMapTagValue("category", "bar")
                    } else if (
                        searchString.equals("cafe", ignoreCase = true) ||
                        searchString.equals("cafes", ignoreCase = true) ||
                        searchString.equals(
                            app.getString(R.string.category_cafe),
                            ignoreCase = true
                        ) ||
                        searchString.equals(
...
